<resources>
    <string name="app_name">movie-catalog-kotlin</string>
    <string name="catalog">MovieCatalog</string>
    <string name="label">label</string>
    <string name="text">Text</string>
    <string name="enter_account">Войти в аккаунт</string>
    <string name="welcome_to_movieCatalog">Добро пожаловать в MovieCatalog</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="enter_to_account">Вход в аккаунт</string>
    <string name="background_movies">backgraound_movies</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="name">Имя</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="male_button">Мужчина</string>
    <string name="female_button">Женщина</string>
    <string name="email_error">email_error</string>
    <string name="error_fill_all_fields">Все поля должны быть заполнены</string>
    <string name="auth_success_notion">Авторизация прошла успешно!</string>
    <string name="error_title">Ошибка</string>
    <string name="login_failed">Ошибка авторизации</string>
    <string name="signup_failed">Ошибка регистрации</string>
    <string name="signup_success_notion">Регистрация прошла успешно!</string>
    <string name="OK_notion">OK</string>
    <string name="success_title">Успешная авторизация</string>
    <string name="sign_in_progress">Вход...</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up_progress">Регистрация...</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="button_description">Вернуться к главному меню</string>
    <string name="error_valid">Неправильно введены данные</string>
    <string name="error_default">Неизвестная ошибка</string>
    <string name="feed_title">Лента</string>
    <string name="movie_title">Фильмы</string>
    <string name="favorite_title">Избранное</string>
    <string name="profile_title">Профиль</string>
    <string name="point">•</string>
    <string name="filmdescription">Опции</string>
    <string name="signup">Регистрация</string>
    <string name="anonymous_review">Анонимный отзыв</string>
    <string name="mark">Оценка</string>
    <string name="change_review">Изменить отзыв</string>
    <string name="send_review">Добавить отзыв</string>
</resources>